--- a/TestAcuite/TestAcuite.csproj
+++ b/TestAcuite/TestAcuite.csproj
@@ -49,6 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
 	  <PackageReference Include="SharpHook" Version="4.0.0" />
 	</ItemGroup>
 
