--- a/TestAcuite/TestAcuite.csproj
+++ b/TestAcuite/TestAcuite.csproj
@@ -32,7 +32,7 @@
 		<AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
 		<PackageCertificateThumbprint>99978DFAD42B2E6EB866BC1D4B03FBC944ECD4D7</PackageCertificateThumbprint>
 		<AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-		<AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+		<AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
 		<AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
 		<GenerateTestArtifacts>True</GenerateTestArtifacts>
 		<AppInstallerUri>C:\Users\Antjac\source\repos\TestAcuite\TestAcuite\bin\Release\net6.0-windows10.0.19041.0\win10-x64</AppInstallerUri>
